Added in image & background

--- a/index.html
+++ b/index.html
@@ -27,9 +27,20 @@
     ></script>
   </head>
   <body>
-    <div class="d-flex bg-warning">
-      <h1>Hey World</h1>
-      <p>hey there</p>
+    <div class="container">
+      <div class="row">
+        <img
+          src="/src/artist.jpeg"
+          alt=""
+          class="rounded-circle img-fluid img-thumbnail col-sm-6"
+        />
+        <div class="welcome col-sm-6">
+          <h1>Hey, my name is Kelsey!</h1>
+          <h2>Welcome to my portfolio! 🎨</h2>
+          <p>I am a front end developer from British Columbia, Canada 🇨🇦</p>
+          <a href="#" class="btn btn-branding">My Portfolio</a>
+        </div>
+      </div>
     </div>
   </body>
 </html>
