--- a/index.html
+++ b/index.html
@@ -27,19 +27,22 @@
     ></script>
   </head>
   <body>
-    <div class="container">
-      <div class="row">
+    <div class="container d-flex">
+      <div class="row col-md-3">
         <img
           src="/src/artist.jpeg"
           alt=""
-          class="rounded-circle img-fluid img-thumbnail col-sm-6"
+          class="logo rounded-circle img-fluid img-thumbnail"
         />
-        <div class="welcome col-sm-6">
-          <h1>Hey, my name is Kelsey!</h1>
-          <h2>Welcome to my portfolio! 🎨</h2>
-          <p>I am a front end developer from British Columbia, Canada 🇨🇦</p>
-          <a href="#" class="btn btn-branding">My Portfolio</a>
         </div>
+        <div class="row col-md-6 pt-4 text-center" >
+         <h1>Hey, my name is Kelsey!</h1>
+          <h2>Welcome to my portfolio! 🎨</h2>
+          <p class="mb-5">I am a front end developer from British Columbia, Canada 🇨🇦</p>
+          <div>
+          <a href="#" class="btn btn-sm btn-branding text-center">My Portfolio</a>
+        </div>
+          </div>
       </div>
     </div>
   </body>
