--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
   </head>
   <body>
     <div class="container d-flex">
-      <div class="row col-md-3">
+      <div class="row col">
         <img
-          src="/src/artist.jpeg"
+          src="/src/woman.png"
           alt=""
           class="logo rounded-circle img-fluid img-thumbnail"
         />
         </div>
-        <div class="row col-md-6 pt-4 text-center" >
-         <h1>Hey, my name is Kelsey!</h1>
-          <h2>Welcome to my portfolio! 🎨</h2>
+        <div class="row col pt-4 text-center" >
+         <h1>Hey, my name is Kelsey Murray!</h1>
+          <h2>Welcome to my portfolio 🎨</h2>
           <p class="mb-5">I am a front end developer from British Columbia, Canada 🇨🇦</p>
           <div>
           <a href="#" class="btn btn-sm btn-branding text-center">My Portfolio</a>
