--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     ></script>
   </head>
   <body>
-    <div class="container d-flex">
+    <div class="container d-flex mt-5">
       <div class="row col">
         <img
           src="/src/woman.png"
@@ -35,15 +35,20 @@
           class="logo rounded-circle img-fluid img-thumbnail"
         />
         </div>
-        <div class="row col pt-4 text-center" >
-         <h1>Hey, my name is Kelsey Murray!</h1>
-          <h2>Welcome to my portfolio 🎨</h2>
-          <p class="mb-5">I am a front end developer from British Columbia, Canada 🇨🇦</p>
+        <div class="row col text-center" >
+         <h1>Hey, I am Kelsey!</h1>
+          <h2>A front end developer from BC, Canada 🇨🇦</h2>
           <div>
-          <a href="#" class="btn btn-sm btn-branding text-center">My Portfolio</a>
+          <a href="#" class="btn mt-2 btn-branding text-center">My Portfolio</a>
         </div>
           </div>
       </div>
+    </div>
+    <div class="container-about justify-center mt-5">
+        <div class="row text-center">
+            <h1>About Me</h1>
+            <p>I really love music. I love to listen to it. I love making it. All aspects of music 🎶 are divine! Coding combines my love of art and music into a wholesome creative and analytical part of me. I enjoy it so much!! ✨</p>
+        </div>
     </div>
   </body>
 </html>
