--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
   </head>
   <body>
     <div class="container d-flex mt-5">
-      <div class="row col">
+      <div class="row col-lg-6">
         <img
           src="/src/woman.png"
           alt=""
           class="logo rounded-circle img-fluid img-thumbnail"
         />
         </div>
-        <div class="row col text-center" >
+        <div class="row col-lg-6 text-center" >
          <h1>Hey, I am Kelsey!</h1>
           <h2>A front end developer from BC, Canada 🇨🇦</h2>
           <div>
@@ -44,8 +44,8 @@
           </div>
       </div>
     </div>
-    <div class="container-about justify-center mt-5">
-        <div class="row text-center">
+    <div class="container-about d-flex justify-center mt-5">
+        <div class="row col text-center">
             <h1>About Me</h1>
             <p>I really love music. I love to listen to it. I love making it. All aspects of music 🎶 are divine! Coding combines my love of art and music into a wholesome creative and analytical part of me. I enjoy it so much!! ✨</p>
         </div>
