--- a/index.html
+++ b/index.html
@@ -27,28 +27,36 @@
     ></script>
   </head>
   <body>
-    <div class="container d-flex mt-5">
-      <div class="row col-lg-6">
-        <img
-          src="/src/woman.png"
-          alt=""
-          class="logo rounded-circle img-fluid img-thumbnail"
-        />
+    <div class="container">
+      <div class="row">
+        <div class="woman col-lg-6">
+          <img
+            src="/src/woman.png"
+            alt="Woman working with laptop"
+            class="logo rounded-circle img-fluid img-thumbnail"
+          />
         </div>
-        <div class="row col-lg-6 text-center" >
-         <h1>Hey, I am Kelsey!</h1>
-          <h2>A front end developer from BC, Canada 🇨🇦</h2>
-          <div>
-          <a href="#" class="btn mt-2 btn-branding text-center">My Portfolio</a>
-        </div>
+        <div class="col-lg-6">
+          <div class="header">
+            <h1>Hey, I am Kelsey!</h1>
+            <h2>A front end developer from BC, Canada 🇨🇦</h2>
+            <a href="#" class="btn mt-2 btn-branding text-center"
+              >My Portfolio</a
+            >
           </div>
+        </div>
       </div>
     </div>
     <div class="container-about d-flex justify-center mt-5">
-        <div class="row col text-center">
-            <h1>About Me</h1>
-            <p>I really love music. I love to listen to it. I love making it. All aspects of music 🎶 are divine! Coding combines my love of art and music into a wholesome creative and analytical part of me. I enjoy it so much!! ✨</p>
-        </div>
+      <div class="row col text-center">
+        <h1>About Me</h1>
+        <p>
+          I really love music. I love to listen to it. I love making it. All
+          aspects of music 🎶 are divine! Coding combines my love of art and
+          music into a wholesome creative and analytical part of me. I enjoy it
+          so much!! ✨
+        </p>
+      </div>
     </div>
   </body>
 </html>
