--- a/index.html
+++ b/index.html
@@ -47,15 +47,23 @@
         </div>
       </div>
     </div>
-    <div class="container-about d-flex justify-center mt-5">
-      <div class="row col text-center">
-        <h1>About Me</h1>
-        <p>
-          I really love music. I love to listen to it. I love making it. All
-          aspects of music 🎶 are divine! Coding combines my love of art and
-          music into a wholesome creative and analytical part of me. I enjoy it
-          so much!! ✨
-        </p>
+    <div class="container-about d-flex flex-column">
+      <div class="container-header">
+        <div class="row">
+          <div class="about col text-center">
+            <h1>About Me</h1>
+          </div>
+        </div>
+      </div>
+      <div class="container-paragraph">
+        <div class="row">
+          <div class="paragraph col text-center">
+            I really love music. I love to listen to it. I love making it. All
+            aspects of music 🎶 are divine! Coding combines my love of art and
+            music into a wholesome creative and analytical part of me. I enjoy
+            it so much!! ✨
+          </div>
+        </div>
       </div>
     </div>
   </body>
