initial commit with new page for projects

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <div class="header">
             <h1>Hey, I am Kelsey!</h1>
             <h2>A front end developer from BC, Canada 🇨🇦</h2>
-            <a href="#" class="btn mt-2 btn-branding text-center"
+            <a href="/work.html" class="btn mt-2 btn-branding text-center"
               >My Portfolio</a
             >
           </div>
