Added in content

--- a/work.html
+++ b/work.html
@@ -31,6 +31,24 @@
       <div class="header">
         <h1>Here are my projects...</h1>
       </div>
+      <div class="contents">
+        <div class="row">
+          <div class="projects col-md-6 mb-5">
+            <h3>Solo Travel Project</h3>
+            <img src="/src/solotravel.png" alt="" class="img-fluid" />
+            <p>Made with HTML and CSS</p>
+            <a href="#" class="btn btn-branding text-center"
+              >Solo Travel Project</a
+            >
+          </div>
+          <div class="projects col-md-6 mb-5">
+            <h3>Weather App</h3>
+            <img src="/src/weather.png" alt="" class="img-fluid" />
+            <p>Made with HTML, CSS and JavaScript</p>
+            <a href="#" class="btn btn-branding text-center">Weather App</a>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
