updated styling for work.html

--- a/work.html
+++ b/work.html
@@ -29,14 +29,14 @@
   <body>
     <div class="container">
       <div class="header">
-        <h1>Here are my projects...</h1>
+        <h1 class="mb-5">Here are my projects...</h1>
       </div>
       <div class="contents">
         <div class="row">
           <div class="projects col-md-6 mb-5">
             <h3>Solo Travel Project</h3>
             <img src="/src/solotravel.png" alt="" class="img-fluid" />
-            <p>Made with HTML and CSS</p>
+            <p class="mt-3 mb-0">Made with HTML and CSS</p>
             <a href="#" class="btn btn-branding text-center"
               >Solo Travel Project</a
             >
@@ -44,7 +44,7 @@
           <div class="projects col-md-6 mb-5">
             <h3>Weather App</h3>
             <img src="/src/weather.png" alt="" class="img-fluid" />
-            <p>Made with HTML, CSS and JavaScript</p>
+            <p class="mt-3 mb-0">Made with HTML, CSS and JavaScript</p>
             <a href="#" class="btn btn-branding text-center">Weather App</a>
           </div>
         </div>
