--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     ></script>
   </head>
   <body>
-    <div class="container">
+    <div class="container mt-5">
       <div class="row">
         <div class="woman col-lg-6">
           <img
@@ -36,8 +36,8 @@
             class="logo rounded-circle img-fluid img-thumbnail"
           />
         </div>
-        <div class="col-lg-6">
-          <div class="header">
+        <div class="col-lg-6 mt-5">
+          <div class="header mt-5">
             <h1>Hey, I am Kelsey!</h1>
             <h2>A front end developer from BC, Canada 🇨🇦</h2>
             <a href="/work.html" class="btn mt-2 btn-branding text-center"
