Added navigation & styling

--- a/work.html
+++ b/work.html
@@ -27,6 +27,35 @@
     ></script>
   </head>
   <body>
+    <nav
+      class="navbar navbar-expand-lg navbar-light"
+      style="background-color: #f7b453"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html">Kelsey Murray</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="../index.html"
+              >Home</a
+            >
+            <a class="nav-link" href="./index.html#about">About</a>
+            <a class="nav-link" href="./work.html">Projects</a>
+            <a class="nav-link" href="./contact.html">Contact</a>
+          </div>
+        </div>
+      </div>
+    </nav>
     <div class="container">
       <div class="header mt-5">
         <h1 class="mb-5">Here are my projects...</h1>
