--- a/index.html
+++ b/index.html
@@ -27,6 +27,35 @@
     ></script>
   </head>
   <body>
+    <nav
+      class="navbar navbar-expand-lg navbar-light"
+      style="background-color: #f7b453"
+    >
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html">Kelsey Murray</a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNavAltMarkup"
+          aria-controls="navbarNavAltMarkup"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link active" aria-current="page" href="../index.html"
+              >Home</a
+            >
+            <a class="nav-link" href="#about">About</a>
+            <a class="nav-link" href="./work.html">Projects</a>
+            <a class="nav-link" href="./contact.html">Contact</a>
+          </div>
+        </div>
+      </div>
+    </nav>
     <div class="container mt-5">
       <div class="row">
         <div class="woman col-lg-6">
@@ -47,7 +76,7 @@
         </div>
       </div>
     </div>
-    <div class="container-about d-flex flex-column">
+    <div class="container-about d-flex flex-column" id="about">
       <div class="container-header">
         <div class="row">
           <div class="about col text-center">
