Added icons & updates to footers

--- a/work.html
+++ b/work.html
@@ -25,6 +25,10 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <script
+      src="https://kit.fontawesome.com/af115dbe03.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <nav
@@ -78,6 +82,26 @@
           </div>
         </div>
       </div>
+      <footer>
+        <div class="social-link">
+          <a href="https://github.com/artistkelz" target="_blank">
+            <i class="fa-brands fa-github"></i
+          ></a>
+          <a href="https://www.linkedin.com/in/kelseymurray07/" target="_blank"
+            ><i class="fa-brands fa-linkedin"></i
+          ></a>
+          <a
+            href="https://www.shecodes.io/hall-of-fame?q=Kelsey+Murray&commit=Search"
+            target="_blank"
+          >
+            <img
+              src="./src/she-codes.png"
+              alt="SheCodes logo"
+              class="shecodes-logo"
+            />
+          </a>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
