more styling on the footer

--- a/index.html
+++ b/index.html
@@ -100,10 +100,17 @@
       </div>
     </div>
     <footer>
-      <div class="contact-box text-center m-5">
+      <div
+        class="contact-box text-center m-5 d-md-flex flex-wrap justify-content-around"
+      >
         <div class="contact">
-          <h4>Let's connect!</h4>
-          <a href="./contact.html" class="btn btn-branding">Contact Me</a>
+          <div class="p-2">
+            <h4>Work Inquiry?</h4>
+            <h5>Let's work together</h5>
+          </div>
+          <div class="p-2">
+            <a href="./contact.html" class="btn btn-branding">Contact Me</a>
+          </div>
         </div>
       </div>
       <div class="social-link text-center">
