updates for footer styling

--- a/index.html
+++ b/index.html
@@ -101,15 +101,17 @@
     </div>
     <footer>
       <div
-        class="contact-box text-center m-5 d-md-flex flex-wrap justify-content-around"
+        class="contact-box text-center m-5 d-md-flex flex-row justify-content-center"
       >
-        <div class="contact">
-          <div class="p-2">
+        <div class="contact d-md-flex">
+          <div class="work p-2">
             <h4>Work Inquiry?</h4>
             <h5>Let's work together</h5>
           </div>
-          <div class="p-2">
-            <a href="./contact.html" class="btn btn-branding">Contact Me</a>
+          <div class="d-flex flex-row-reverse">
+            <div class="button p-2">
+              <a href="./contact.html" class="btn btn-branding">Contact Me</a>
+            </div>
           </div>
         </div>
       </div>
