Updates of projects, contact and styling

--- a/contact.html
+++ b/contact.html
@@ -49,14 +49,13 @@
 </nav>
     <div class="container">
       <div class="header mt-5">
-        <h1 class="mb-5">Let's get in touch!</h1>
+        <h1 class="mb-5">Let's work together!</h1>
       </div>
       <div class="contents">
           <h3>Email</h3>
           <p><a href="mailto:kelseymurray07@gmail.com" class="email" >kelseymurray07@gmail.com</a></p>
-          <h3>LinkedIn </h3>
-          <p><a href="www.https://www.linkedin.com/in/kelseymurray07/" class="linkedin" >Kelsey Murray</a></p>
-      </div>
+        <h3><i class="fa-solid fa-arrow-down"></i> Connect with me here, too! <i class="fa-solid fa-arrow-down"></i></h3>
+        </div>
       
         </div>
       </div>
@@ -79,6 +78,16 @@
             />
           </a>
         </div>
+        <p class="text-center p-2">
+        This page was coded by Kelsey, and it is
+        <a
+          href="http://github.com/artistkelz"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="open-source"
+          >open-sourced</a
+        >.
+      </p>
       </footer>
     </div>
   </body>
