--- a/index.html
+++ b/index.html
@@ -92,25 +92,33 @@
         <div class="row">
           <div class="paragraph col text-center">
             I really love music. I love to listen to it. I love making it. All
-            aspects of music 🎶 are divine! Coding combines my love of art and
-            music into a wholesome creative and analytical part of me. I enjoy
-            it so much!! ✨
+            aspects of music 🎶 are divine! I first discovered coding during my
+            courses in engineering. And was instantly intrigued. It has remained
+            with me since. I have recently discovered that coding combines my
+            love of art and music into a wholesome creative and analytical part
+            of me. I enjoy it so much!! ✨ I enjoy the design process and look
+            forward to working on more projects. If you would like to work
+            together, please contact me. I look forward to connecting with you!
           </div>
         </div>
       </div>
     </div>
     <footer>
-      <div
-        class="contact-box text-center m-5 d-md-flex flex-row justify-content-center"
-      >
-        <div class="contact d-md-flex">
-          <div class="work p-2">
-            <h4>Work Inquiry?</h4>
-            <h5>Let's work together</h5>
-          </div>
-          <div class="d-flex flex-row-reverse">
-            <div class="button p-2">
-              <a href="./contact.html" class="btn btn-branding">Contact Me</a>
+      <div class="d-none d-lg-block">
+        <div
+          class="contact-box text-center m-5 d-md-flex flex-row justify-content-center"
+        >
+          <div class="contact d-md-flex">
+            <div class="work p-2">
+              <h4>Work Inquiry?</h4>
+              <h5>Let's work together</h5>
+            </div>
+            <div class="d-flex flex-row-reverse">
+              <div class="button p-2">
+                <a href="./contact.html" class="btn btn-branding text-center"
+                  >Contact Me</a
+                >
+              </div>
             </div>
           </div>
         </div>
@@ -133,6 +141,16 @@
           />
         </a>
       </div>
+      <p class="text-center p-2">
+        This page was coded by Kelsey, and it is
+        <a
+          href="http://github.com/artistkelz"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="open-source"
+          >open-sourced</a
+        >.
+      </p>
     </footer>
   </body>
 </html>
