--- a/work.html
+++ b/work.html
@@ -62,23 +62,43 @@
     </nav>
     <div class="container">
       <div class="header mt-5">
-        <h1 class="mb-5">Here are my projects...</h1>
+        <h1 class="mb-5">Take a look at my projects...</h1>
       </div>
       <div class="contents">
         <div class="row">
           <div class="projects col-md-6 mb-5">
-            <h3>Solo Travel Project</h3>
-            <img src="/src/solotravel.png" alt="" class="img-fluid" />
+            <h3>Solo Travel Webpage</h3>
+            <img src="/src/solotravel.png" alt="" class="img-fluid rounded" />
             <p class="mt-3 mb-0">Made with HTML and CSS</p>
-            <a href="#" class="btn btn-branding text-center"
+            <a
+              href="https://m5lcfo.csb.app/"
+              target="_blank"
+              class="btn btn-branding text-center"
               >Solo Travel Project</a
             >
           </div>
           <div class="projects col-md-6 mb-5">
             <h3>Weather App</h3>
-            <img src="/src/weather.png" alt="" class="img-fluid" />
+            <img src="/src/weather.png" alt="" class="img-fluid rounded" />
             <p class="mt-3 mb-0">Made with HTML, CSS and JavaScript</p>
-            <a href="#" class="btn btn-branding text-center">Weather App</a>
+            <a
+              href="https://jovial-newton-9046ee.netlify.app"
+              target="_blank"
+              class="btn btn-branding text-center"
+              >Weather App</a
+            >
+          </div>
+          <div class="projects col-md-6 mb-5">
+            <h3>Dictionary App</h3>
+            <img
+              src="/src/coming-soon.png"
+              alt=""
+              class="dictionary img-fluid rounded"
+            />
+            <p class="mt-3 mb-0">
+              Built using HTML, API, advanced CSS, and React
+            </p>
+            <a href="#" class="btn btn-branding text-center"> Coming Soon</a>
           </div>
         </div>
       </div>
@@ -101,6 +121,16 @@
             />
           </a>
         </div>
+        <p class="text-center p-2">
+          This page was coded by Kelsey, and it is
+          <a
+            href="http://github.com/artistkelz"
+            target="_blank"
+            rel="noopener noreferrer"
+            class="open-source"
+            >open-sourced</a
+          >.
+        </p>
       </footer>
     </div>
   </body>
