Updates for SEO

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kelsey Murray Portfolio - Homepage</title>
+    <meta
+      name="description"
+      content="Kelsey is a front end developer who adds an artistic creativity to each project she works on. Check her out."
+    />
+    <title>Kelsey Murray's Portfolio - Homepage - ArtistKelz.com</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -36,7 +40,9 @@
       style="background-color: #f7b453"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html">Kelsey Murray</a>
+        <a class="navbar-brand" href="../index.html" alt="Homepage"
+          >Kelsey Murray</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -50,12 +56,16 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="../index.html"
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="../index.html"
+              alt="Homepage"
               >Home</a
             >
-            <a class="nav-link" href="#about">About</a>
-            <a class="nav-link" href="./work.html">Projects</a>
-            <a class="nav-link" href="./contact.html">Contact</a>
+            <a class="nav-link" href="#about" alt="About">About</a>
+            <a class="nav-link" href="./work.html" alt="Projects">Projects</a>
+            <a class="nav-link" href="./contact.html" alt="Contact">Contact</a>
           </div>
         </div>
       </div>
@@ -65,7 +75,7 @@
         <div class="woman col-lg-6">
           <img
             src="/src/woman.png"
-            alt="Woman working with laptop"
+            alt="Woman coding with a laptop"
             class="logo rounded-circle img-fluid img-thumbnail"
           />
         </div>
@@ -124,15 +134,23 @@
         </div>
       </div>
       <div class="social-link text-center">
-        <a href="https://github.com/artistkelz" target="_blank">
+        <a
+          href="https://github.com/artistkelz"
+          target="_blank"
+          alt="Kelsey's Github"
+        >
           <i class="fa-brands fa-github"></i
         ></a>
-        <a href="https://www.linkedin.com/in/kelseymurray07/" target="_blank"
+        <a
+          href="https://www.linkedin.com/in/kelseymurray07/"
+          target="_blank"
+          alt="Kelsey's LinkedIn"
           ><i class="fa-brands fa-linkedin"></i
         ></a>
         <a
           href="https://www.shecodes.io/hall-of-fame?q=Kelsey+Murray&commit=Search"
           target="_blank"
+          alt="See Kelsey's projects on SheCodes"
         >
           <img
             src="./src/she-codes.png"
@@ -146,6 +164,7 @@
         <a
           href="http://github.com/artistkelz"
           target="_blank"
+          alt="Github Open Source"
           rel="noopener noreferrer"
           class="open-source"
           >open-sourced</a
