--- a/work.html
+++ b/work.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kelsey Murray Portfolio - Projects</title>
+    <meta
+      name="description"
+      content="Kelsey is a front end developer who adds an artistic creativity to each project she works on. Take a look at her projects."
+    />
+    <title>Kelsey Murray's Portfolio - Projects - ArtistKelz.com</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -36,7 +40,9 @@
       style="background-color: #f7b453"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html">Kelsey Murray</a>
+        <a class="navbar-brand" href="../index.html" alt="Homepage"
+          >Kelsey Murray</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -50,12 +56,16 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="../index.html"
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="../index.html"
+              alt="Homepage"
               >Home</a
             >
-            <a class="nav-link" href="./index.html#about">About</a>
-            <a class="nav-link" href="./work.html">Projects</a>
-            <a class="nav-link" href="./contact.html">Contact</a>
+            <a class="nav-link" href="#about" alt="About">About</a>
+            <a class="nav-link" href="./work.html" alt="Projects">Projects</a>
+            <a class="nav-link" href="./contact.html" alt="Contact">Contact</a>
           </div>
         </div>
       </div>
@@ -68,7 +78,11 @@
         <div class="row">
           <div class="projects col-md-6 mb-5">
             <h3>Solo Travel Webpage</h3>
-            <img src="/src/solotravel.png" alt="" class="img-fluid rounded" />
+            <img
+              src="/src/solotravel.png"
+              alt="My solo travel webpage project"
+              class="img-fluid rounded"
+            />
             <p class="mt-3 mb-0">Made with HTML and CSS</p>
             <a
               href="https://m5lcfo.csb.app/"
@@ -79,7 +93,11 @@
           </div>
           <div class="projects col-md-6 mb-5">
             <h3>Weather App</h3>
-            <img src="/src/weather.png" alt="" class="img-fluid rounded" />
+            <img
+              src="/src/weather.png"
+              alt="My weather app project"
+              class="img-fluid rounded"
+            />
             <p class="mt-3 mb-0">Made with HTML, CSS and JavaScript</p>
             <a
               href="https://jovial-newton-9046ee.netlify.app"
@@ -92,7 +110,7 @@
             <h3>Dictionary App</h3>
             <img
               src="/src/coming-soon.png"
-              alt=""
+              alt="Coming soon - Dictionary App Project"
               class="dictionary img-fluid rounded"
             />
             <p class="mt-3 mb-0">
@@ -103,16 +121,24 @@
         </div>
       </div>
       <footer>
-        <div class="social-link">
-          <a href="https://github.com/artistkelz" target="_blank">
+        <div class="social-link text-center">
+          <a
+            href="https://github.com/artistkelz"
+            target="_blank"
+            alt="Kelsey's Github"
+          >
             <i class="fa-brands fa-github"></i
           ></a>
-          <a href="https://www.linkedin.com/in/kelseymurray07/" target="_blank"
+          <a
+            href="https://www.linkedin.com/in/kelseymurray07/"
+            target="_blank"
+            alt="Kelsey's LinkedIn"
             ><i class="fa-brands fa-linkedin"></i
           ></a>
           <a
             href="https://www.shecodes.io/hall-of-fame?q=Kelsey+Murray&commit=Search"
             target="_blank"
+            alt="See Kelsey's projects on SheCodes"
           >
             <img
               src="./src/she-codes.png"
@@ -126,6 +152,7 @@
           <a
             href="http://github.com/artistkelz"
             target="_blank"
+            alt="Github Open Source"
             rel="noopener noreferrer"
             class="open-source"
             >open-sourced</a
