--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kelsey Murray Portfolio - Contact</title>
+    <meta
+      name="description"
+      content="Kelsey is a front end developer who adds an artistic creativity to each project she works on. Contact her here."
+    />
+    <title>Kelsey Murray's Portfolio - Contact - ArtistKelz.com</title>
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -33,17 +37,16 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #f7b453;">
   <div class="container-fluid">
-    <a class="navbar-brand" href="../index.html">Kelsey Murray</a>
+    <a class="navbar-brand" href="../index.html" alt="Homepage">Kelsey Murray</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-        <a class="nav-link" href="./index.html#about">About</a>
-        <a class="nav-link" href="./work.html">Projects</a>
-        <a class="nav-link" href="./contact.html">Contact</a>
-      </div>
+        <a class="nav-link active" aria-current="page" href="../index.html" alt="Homepage">Home</a>
+        <a class="nav-link" href="#about" alt="About" >About</a>
+            <a class="nav-link" href="./work.html" alt="Projects">Projects</a>
+            <a class="nav-link" href="./contact.html" alt="Contact">Contact</a>
     </div>
   </div>
 </nav>
@@ -53,7 +56,7 @@
       </div>
       <div class="contents">
           <h3>Email</h3>
-          <p><a href="mailto:kelseymurray07@gmail.com" class="email" >kelseymurray07@gmail.com</a></p>
+          <p><a href="mailto:kelseymurray07@gmail.com" class="email" alt="Kelsey's Email" >kelseymurray07@gmail.com</a></p>
         <h3><i class="fa-solid fa-arrow-down"></i> Connect with me here, too! <i class="fa-solid fa-arrow-down"></i></h3>
         </div>
       
@@ -61,28 +64,37 @@
       </div>
       <footer>
         <div class="social-link text-center">
-          <a href="https://github.com/artistkelz" target="_blank">
-            <i class="fa-brands fa-github"></i
-          ></a>
-          <a href="https://www.linkedin.com/in/kelseymurray07/" target="_blank"
-            ><i class="fa-brands fa-linkedin"></i
-          ></a>
-          <a
-            href="https://www.shecodes.io/hall-of-fame?q=Kelsey+Murray&commit=Search"
-            target="_blank"
-          >
-            <img
-              src="./src/she-codes.png"
-              alt="SheCodes logo"
-              class="shecodes-logo"
-            />
-          </a>
-        </div>
-        <p class="text-center p-2">
+        <a
+          href="https://github.com/artistkelz"
+          target="_blank"
+          alt="Kelsey's Github"
+        >
+          <i class="fa-brands fa-github"></i
+        ></a>
+        <a
+          href="https://www.linkedin.com/in/kelseymurray07/"
+          target="_blank"
+          alt="Kelsey's LinkedIn"
+          ><i class="fa-brands fa-linkedin"></i
+        ></a>
+        <a
+          href="https://www.shecodes.io/hall-of-fame?q=Kelsey+Murray&commit=Search"
+          target="_blank"
+          alt="See Kelsey's projects on SheCodes"
+        >
+          <img
+            src="./src/she-codes.png"
+            alt="SheCodes logo"
+            class="shecodes-logo"
+          />
+        </a>
+      </div>
+      <p class="text-center p-2">
         This page was coded by Kelsey, and it is
         <a
           href="http://github.com/artistkelz"
           target="_blank"
+          alt="Github Open Source"
           rel="noopener noreferrer"
           class="open-source"
           >open-sourced</a
