about nav correction

--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link active" aria-current="page" href="../index.html" alt="Homepage">Home</a>
-        <a class="nav-link" href="#about" alt="About" >About</a>
+        <a class="nav-link" href="./index.html#about" alt="About" >About</a>
             <a class="nav-link" href="./work.html" alt="Projects">Projects</a>
             <a class="nav-link" href="./contact.html" alt="Contact">Contact</a>
     </div>
