--- a/work.html
+++ b/work.html
@@ -63,7 +63,7 @@
               alt="Homepage"
               >Home</a
             >
-            <a class="nav-link" href="#about" alt="About">About</a>
+            <a class="nav-link" href="./index.html#about" alt="About">About</a>
             <a class="nav-link" href="./work.html" alt="Projects">Projects</a>
             <a class="nav-link" href="./contact.html" alt="Contact">Contact</a>
           </div>
