Updated about me

--- a/index.html
+++ b/index.html
@@ -103,12 +103,12 @@
           <div class="paragraph col text-center">
             I really love music. I love to listen to it. I love making it. All
             aspects of music 🎶 are divine! I first discovered coding during my
-            courses in engineering. And was instantly intrigued. It has remained
-            with me since. I have recently discovered that coding combines my
-            love of art and music into a wholesome creative and analytical part
-            of me. I enjoy it so much!! ✨ I enjoy the design process and look
-            forward to working on more projects. If you would like to work
-            together, please contact me. I look forward to connecting with you!
+            courses in engineering and have been hooked since. I have recently
+            discovered that coding combines my love of art and music into a
+            wholesome creative and analytical part of me. I enjoy it so much!!
+            ✨ I enjoy the design process and look forward to working on more
+            projects. If you would like to work together, please contact me. I
+            look forward to connecting with you!
           </div>
         </div>
       </div>
