Updated dictionary app project

--- a/work.html
+++ b/work.html
@@ -109,14 +109,20 @@
           <div class="projects col-md-6 mb-5">
             <h3>Dictionary App</h3>
             <img
-              src="/src/coming-soon.png"
-              alt="Coming soon - Dictionary App Project"
+              src="/src/dictionary-app.png"
+              alt="Dictionary App Project"
               class="dictionary img-fluid rounded"
             />
             <p class="mt-3 mb-0">
               Built using HTML, API, advanced CSS, and React
             </p>
-            <a href="#" class="btn btn-branding text-center"> Coming Soon</a>
+            <a
+              href="https://serene-phoenix-4a479d.netlify.app"
+              target="_blank"
+              class="btn btn-branding text-center"
+            >
+              Dictionary App</a
+            >
           </div>
         </div>
       </div>
