--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="col-lg-6 mt-5">
           <div class="header mt-5">
             <h1>Hey, I am Kelsey!</h1>
-            <h2>A front end developer from BC, Canada 🇨🇦</h2>
+            <h2>A front end developer from AB, Canada 🇨🇦</h2>
             <a href="/work.html" class="btn mt-2 btn-branding text-center"
               >My Portfolio</a
             >
