--- a/work.html
+++ b/work.html
@@ -100,7 +100,7 @@
             />
             <p class="mt-3 mb-0">Made with HTML, CSS and JavaScript</p>
             <a
-              href="https://jovial-newton-9046ee.netlify.app"
+              href="https://weather-app-kelsey.netlify.app"
               target="_blank"
               class="btn btn-branding text-center"
               >Weather App</a
@@ -117,11 +117,27 @@
               Built using HTML, API, advanced CSS, and React
             </p>
             <a
-              href="https://serene-phoenix-4a479d.netlify.app"
+              href="https://galaxy-dictionary.netlify.app/"
               target="_blank"
               class="btn btn-branding text-center"
             >
               Dictionary App</a
+            >
+          </div>
+          <div class="projects col-md-6 mb-5">
+            <h3>World Clock App</h3>
+            <img
+              src="/src/world-clock-app.png"
+              alt="World Clock App Project"
+              class="img-fluid rounded"
+            />
+            <p class="mt-3 mb-0">Built using HTML, API, advanced CSS</p>
+            <a
+              href="https://world-clock2023.netlify.app/"
+              target="_blank"
+              class="btn btn-branding text-center"
+            >
+              World Clock App</a
             >
           </div>
         </div>
