Added world clock image

--- a/work.html
+++ b/work.html
@@ -127,7 +127,7 @@
           <div class="projects col-md-6 mb-5">
             <h3>World Clock App</h3>
             <img
-              src="/src/world-clock-app.png"
+              src="/src/world-clock.png"
               alt="World Clock App Project"
               class="img-fluid rounded"
             />
