Added new section of recent projects

--- a/work.html
+++ b/work.html
@@ -72,6 +72,30 @@
     </nav>
     <div class="container">
       <div class="header mt-5">
+        <h1 class="mb-5">Here is my most recent project:</h1>
+      </div>
+      <div class="contents">
+        <div class="row">
+          <div class="projects col-md-6 mb-5">
+            <h3>Travel Project - Bangkok</h3>
+            <img
+              src="/src/tp-bangkok.png"
+              alt="My bangkok travel project"
+              class="img-fluid rounded"
+            />
+            <p class="mt-3 mb-0">Made with HTML, CSS and responsive</p>
+            <a
+              href="ttps://travel-project-bangkok.netlify.app"
+              target="_blank"
+              class="btn btn-branding text-center"
+              >Travel Project - Bangkok</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="header mt-5">
         <h1 class="mb-5">Take a look at my projects...</h1>
       </div>
       <div class="contents">
