Added picture to contact page

--- a/contact.html
+++ b/contact.html
@@ -51,6 +51,14 @@
   </div>
 </nav>
     <div class="container">
+             <div class="row">
+        <div class="kelsey col-lg-6">
+          <img
+            src="/src/kelsey.JPG"
+            alt="Picture of me, Kelsey"
+            class="logo rounded-circle img-fluid img-thumbnail"
+          />
+        </div>
       <div class="header mt-5">
         <h1 class="mb-5">Let's work together!</h1>
       </div>
