Changed picture placement, updated elements

--- a/contact.html
+++ b/contact.html
@@ -51,17 +51,18 @@
   </div>
 </nav>
     <div class="container">
-             <div class="row">
+           
+      <div class="header mt-5">
+        <h1 class="mb-5">Let's work together!</h1>
+      </div>  
+      <div class="row">
         <div class="kelsey col-lg-6">
           <img
             src="/src/kelsey.JPG"
             alt="Picture of me, Kelsey"
-            class="logo rounded-circle img-fluid img-thumbnail"
+            class="logo rounded-circle img-fluid img-thumbnail center-block"
           />
         </div>
-      <div class="header mt-5">
-        <h1 class="mb-5">Let's work together!</h1>
-      </div>
       <div class="contents">
           <h3>Email</h3>
           <p><a href="mailto:kelseymurray07@gmail.com" class="email" alt="Kelsey's Email" >kelseymurray07@gmail.com</a></p>
