changed out image; updating layout

--- a/contact.html
+++ b/contact.html
@@ -55,8 +55,8 @@
       <div class="header mt-5">
         <h1 class="mb-5">Let's work together!</h1>
       </div>  
-      <div class="row">
-        <div class="kelsey col-lg-6">
+      <div>
+        <div class="kelsey">
           <img
             src="/src/kelsey.JPG"
             alt="Picture of me, Kelsey"
