--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <img
             src="/src/woman.png"
             alt="Woman coding with a laptop"
-            class="logo rounded-circle img-fluid img-thumbnail"
+            class="logo rounded-circle img-fluid"
           />
         </div>
         <div class="col-lg-6 mt-5">
