updated about-me section

--- a/index.html
+++ b/index.html
@@ -76,13 +76,13 @@
           <img
             src="/src/woman.png"
             alt="Woman coding with a laptop"
-            class="logo rounded-circle img-fluid"
+            class="logo rounded-circle img-fluid img-thumbnail"
           />
         </div>
         <div class="col-lg-6 mt-5">
           <div class="header mt-5">
             <h1>Hey, I am Kelsey!</h1>
-            <h2>A front end developer from AB, Canada 🇨🇦</h2>
+            <h2>A front-end developer from AB, Canada 🇨🇦</h2>
             <a href="/work.html" class="btn mt-2 btn-branding text-center"
               >My Portfolio</a
             >
@@ -101,14 +101,22 @@
       <div class="container-paragraph">
         <div class="row">
           <div class="paragraph col text-center">
-            I really love music. I love to listen to it. I love making it. All
-            aspects of music 🎶 are divine! I first discovered coding during my
-            courses in engineering and have been hooked since. I have recently
-            discovered that coding combines my love of art and music into a
-            wholesome creative and analytical part of me. I enjoy it so much!!
-            ✨ I enjoy the design process and look forward to working on more
-            projects. If you would like to work together, please contact me. I
-            look forward to connecting with you!
+            I love creating and making something beautiful. It comes out in all
+            aspects of my life. Anywhere from my home, to creating webpages! I
+            also really love music. I love to listen to it (especially while
+            coding). I love creating it. All aspects of music 🎶 are divine! I
+            first discovered coding during my courses in engineering and have
+            been hooked ever since. I have recently discovered that coding
+            combines my love of art and music into a wholesome creative and
+            analytical part of me. I enjoy it so much!! ✨ I enjoy the design
+            process and look forward to working on more projects. If you would
+            like to work together, please contact me. I look forward to
+            connecting with you!
+            <br />
+            The tools I use: VS Code, MacOS, GitHub
+            <br />
+            Technologies I work with: React.js, Bootstrap, Responsive
+            development
           </div>
         </div>
       </div>
