updated SheCodes link

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
           ><i class="fa-brands fa-linkedin"></i
         ></a>
         <a
-          href="https://www.shecodes.io/hall-of-fame?q=Kelsey+Murray&commit=Search"
+          href="https://www.shecodes.io/graduates/29470-kelsey-murray"
           target="_blank"
           alt="See Kelsey's projects on SheCodes"
         >
